@@ -5,7 +5,7 @@ import os
 import time
 #static
 NAME = "virtualeco"
-LAST_UPDATE = "2012-09-21"
+LAST_UPDATE = "2012-09-23"
 DATABASE_FORMAT_VERSION = "1.1.0"
 USERDATA_FORMAT_VERSION = "1.1.0"
 
