@@ -4,6 +4,7 @@ import sys
 import os
 import threading
 import traceback
+import time
 from lib import env
 from lib import general
 from lib import server
@@ -151,6 +152,28 @@ class PC:
 			self.motion_id = motion_id
 			self.motion_loop = True if motion_loop else False
 		self.map_send_map("121c", self) #モーション通知
+		#let pet motion refer master
+		if self.pet:
+			self.set_pet_motion_delay(motion_id, motion_loop, 0.5)
+	
+	def _set_pet_motion_delay(self, motion_id, loop, delay):
+		try:
+			with self.lock:
+				if not self.pet:
+					return
+				if motion_id == 135 and loop: pass
+				elif self.pet.motion_id == 135: #座る
+					motion_id = 111 #立つ
+				else: return
+			time.sleep(delay)
+			with self.lock:
+				if not self.pet:
+					return
+				self.pet.set_motion(motion_id, loop) #座る
+		except:
+			general.log_error(traceback.format_exc())
+	def set_pet_motion_delay(self, *args):
+		general.start_thread(self._set_pet_motion_delay, args)
 	
 	def set_coord(self, x, y):
 		with self.lock:
