@@ -22,9 +22,9 @@ lv_job2x = 1
 lv_job2t = 1
 lv_job3 = 1
 gold = 0
-x = 10.5
-y = 2.5
-dir = 6
+x = 5.78
+y = 3.47
+dir = 3
 
 [status]
 str = 8
